--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
                 <li><a href="#">Contact</a></li>
                 <div class="icon">
                     <i class="fa-brands fa-facebook-f fa-lg"></i>
+                    <i class="fa-brands fa-instagram fa-lg"></i>
                 </div>
             </ul>
         </div>
         <div class="back">
             <div class="overlay"></div>
         </div>
+        <!-- Home section -->
         <div class="mid">
             <p>Where beginners start everyday</p>
             <h2>Imperial Brazilian Jiu Jitsu</h2>
@@ -31,5 +33,27 @@
                 <a class="border" href="#">Programs</a>
             </div>
         </div>
+        <!-- About us section -->
+        <div class="about">
+            <div class="one">
+                <h3>Our Mission</h3>
+                <h6>To empower individuals through the art of Brazilian Jiu Jitsu</h6>
+                <p>We strive to create a welcoming and supportive community that fosters personal growth, physical and mental wellness, and the development of lifelong skills. Our experienced instructors provide world-class training in a safe and respectful environment, helping our members to achieve their full potential both on and off the mats. At our gym, we are committed to cultivating an atmosphere of inclusivity, positivity, and excellence.</p>
+                <a href="#">Contact Us</a>
+            </div>
+            <div class="two">
+                <h3>Class Times</h3>
+                <br>
+                <h5>Kids Class</h5>
+                <p>Mon - Thurs: 5:00 - 5:45 PM</p>
+                <h5>Adult Beginner</h5>
+                <p>Mon - Weds: 6:00 - 7:00 PM</p>
+                <h5>Adult Intermediate/Advanced</h5>
+                <p>Mon - Weds: 7:15 - 8:15 PM</p>
+                <h5>Open Mat</h5>
+                <p>Thurs: 6:00 - 7:30 PM</p>
+            </div>
+        </div>
+
     </body>
 </html>
