--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Programs</a></li>
-                <li><a href="#">Schedule</a></li>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Contact</a></li>
                 <div class="icon">
@@ -54,6 +53,50 @@
                 <p>Thurs: 6:00 - 7:30 PM</p>
             </div>
         </div>
-
+        <!-- Program Card section -->
+        <div class="programSection">
+            <h2>Our Programs</h2>
+        <div class="programs">
+              <div class="programs1">
+                <div class="img">
+                    <img src="kidsBJJ.jpg" />
+                </div>
+                <div class="programDetails">
+                    <div class="name">
+                        <h4>Kids Program</h4>
+                    </div>
+                    <div class="details">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="programs1">
+                <div class="img">
+                    <img src="whitebelt.jpg" />
+                </div>
+                <div class="programDetails">
+                    <div class="name">
+                        <h4>Kids Program</h4>
+                    </div>
+                    <div class="details">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="programs1">
+                <div class="img">
+                    <img src="advancedBJJ.jpg" />
+                </div>
+                <div class="programDetails">
+                    <div class="name">
+                        <h4>Kids Program</h4>
+                    </div>
+                    <div class="details">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </body>
 </html>
