--- a/index.html
+++ b/index.html
@@ -82,12 +82,7 @@
                         </div>
                         <div class="details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut
-                                enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat.
+                                Our kids jiu jitsu class is designed to teach children the fundamentals of Brazilian Jiu Jitsu in a fun and safe environment. Classes focus on basic techniques, coordination, and physical fitness while emphasizing important values such as respect, discipline, and teamwork.
                             </p>
                         </div>
                     </div>
@@ -102,12 +97,7 @@
                         </div>
                         <div class="details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut
-                                enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat.
+                                Our beginner Jiu Jitsu class is perfect for those who are new to the art and looking to learn the fundamentals. In this class, students will learn basic techniques, positioning, and movements, as well as build strength, flexibility, and confidence. All adults are welcomed to join this class.
                             </p>
                         </div>
                     </div>
@@ -122,12 +112,7 @@
                         </div>
                         <div class="details">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut
-                                enim ad minim veniam, quis nostrud exercitation
-                                ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat.
+                                Our intermediate/advanced class is designed for students with previous grappling experience looking to refine their techniques and improve their overall game. In this class, we focus on advanced techniques and live sparring to help our students reach their full potential.
                             </p>
                         </div>
                     </div>
