remove responsive nav

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Imperial BJJ</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link
@@ -197,14 +198,6 @@
 
                     window.location.href = mailtoLink;
                 });
-            const toggleButton =
-                document.getElementsByClassName("toggle-button")[0];
-            const navbarLinks =
-                document.getElementsByClassName("navbar-links")[0];
-
-            toggleButton.addEventListener("click", () => {
-                navbarLinks.classList.toggle("active");
-            });
         </script>
     </body>
 </html>
