--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Imperial BJJ</title>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="style.css" />
         <link
@@ -10,14 +10,9 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         />
     </head>
-    <body>
+    <body data-offset="50">
         <div class="nav">
             <h2 id="logo">Imperial BJJ</h2>
-            <a href="#" class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
             <ul id="item" class="navbar-links">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About Us</a></li>
@@ -36,6 +31,7 @@
                     ></a>
                 </div>
             </ul>
+            <i id="bar" class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <div class="back" id="Home">
             <div class="overlay"></div>
@@ -198,6 +194,18 @@
 
                     window.location.href = mailtoLink;
                 });
+            let menu = document.getElementById("bar");
+            let item = document.getElementById("item");
+
+            item.style.right = "-300px";
+            menu.onclick = function () {
+                /* body... */
+                if (item.style.right == "-300px") {
+                    item.style.right = "0";
+                } else {
+                    item.style.right = "-300px";
+                }
+            };
         </script>
     </body>
 </html>
