fix for program section on mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body data-offset="50">
         <div class="nav">
-            <h2 id="logo">Imperial BJJ</h2>
+            <h2><a id="logo" href="#Home">Imperial BJJ</a></h2>
             <ul id="item" class="navbar-links">
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#About">About Us</a></li>
