--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="programDetails">
                         <div class="name">
-                            <h4>Kids Program</h4>
+                            <h4>Kids - All Levels</h4>
                         </div>
                         <div class="details">
                             <p>
